frontend/test/should_pass/basic_063.grg
using basic_model_002;

rule r {
	x : BB;

	replace {
		eval {
			x.ib = 42;
		}
	}
}

