frontend/test/should_fail/attrib_093.grg
using attrib_model_093;

rule dummy {
  replace {
    EEE:AAA;
    eval { EEE.EEE = EEE::EEE; }
  }
}
